crates/ox_content_docs/src/markdown/tests/snapshots/html_display_format_options_switch_explicit_sections__table_markdown.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like `@api transform` to limit results to the generated API reference.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>members</span>
</span>
</div>

## Modules

<table class="ox-api-modules-table">
<thead><tr><th>Module</th><th>Symbols</th><th>Description</th></tr></thead>
<tbody>
<tr><td><a href="./mod.md">mod</a></td><td>2 symbols</td><td></td></tr>
</tbody>
</table>

===== mod.md =====
# mod

> 2 documented symbols. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>parameters</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>members</span>
</span>
</div>

## Reference

<div class="ox-api-controls" data-ox-api-target=".ox-api-entry" role="toolbar" aria-label="Reference display controls">
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="expand">Open all</button>
<button type="button" class="ox-api-controls__button" data-ox-api-toggle="collapse">Close all</button>
</div>

<details id="command" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">interface</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">Command(): void</code><span class="ox-api-entry__description">Command options.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">2 members</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Command options.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Command(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<ul class="ox-api-entry__members-list">
<li id="command-name" class="ox-api-entry__member">
  <div class="ox-api-entry__member-heading">
    <code class="ox-api-entry__member-name">name</code><span class="ox-api-badge">readonly</span>
    <span class="ox-api-entry__member-kind">property</span>
    <code class="ox-api-entry__member-type language-typescript">string</code>
  </div>
  <div class="ox-api-entry__member-description">Command name.</div>
</li>
</ul>
</div>
<div class="ox-api-entry__member-group ox-api-entry__member-group--details">
<h5>Methods</h5>
<div class="ox-api-entry__member-details">
<section id="command-run" class="ox-api-entry__member-detail">
<h5>run()</h5>
<pre><code class="language-typescript">run(ctx: Context): Promise&lt;void&gt;;</code></pre>
<div class="ox-api-entry__member-description">Runs the command.</div><div class="ox-api-entry__member-detail-section ox-api-entry__member-detail-section--params">
<h6>Parameters</h6>
<table class="ox-api-entry__member-params-table"><thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead><tbody><tr><td><code>ctx</code></td><td><code>Context</code></td><td>Runtime context.</td></tr></tbody></table>
</div></section>
</div>
</div>
</div>
  </div>
</details>

<details id="make" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">fn</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">make(): void</code><span class="ox-api-entry__description">Make a thing.</span><span class="ox-api-entry__meta"><span class="ox-api-badge">1 param</span></span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Make a thing.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function make(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--type-parameters">
<h4>Type Parameters</h4>
<table class="ox-api-entry__type-parameters-table">
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
  <td><code>T</code></td>
  <td>Value type.</td>
</tr>
</tbody>
</table>
</div>
<div class="ox-api-entry__section ox-api-entry__section--params">
<h4>Parameters</h4>
<table class="ox-api-entry__params-table">
<thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr>
  <td><code>value</code></td>
  <td><code>string</code></td>
  <td>Input value.</td>
</tr>
</tbody>
</table>
</div>
  </div>
</details>
